--- a/about us/ourclient.html
+++ b/about us/ourclient.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Our Team </title>
+    <title>Our Client </title>
 
     <!-- fonts link   -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -94,9 +94,9 @@
                                             ABOUT US
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item  active" href="#">Our Team</a></li>
+                                            <li><a class="dropdown-item " href="#">Our Team</a></li>
                                             <li><a class="dropdown-item" href="#">Testimonial</a></li>
-                                            <li><a class="dropdown-item" href="#">Our Client</a></li>
+                                            <li><a class="dropdown-item active" href="#">Our Client</a></li>
                                             <li><a class="dropdown-item" href="#">Partnership</a></li>
                                             <li><a class="dropdown-item" href="#">Technologies</a></li>
                                             <li><a class="dropdown-item" href="#">Overview</a></li>
@@ -181,123 +181,130 @@
     <div class="banner">
         <div class="fixed-image"></div>
     </div>
-    <!--    team section -->
-    <section id="team-section">
-        <div class="team-wrapper">
-            <div class="container">
+    <!--   client section -->
+
+    <section id="ourclient" class="mt-5">
+        <div class="container">
+            <div class="our-client-wrapper text-center">
+                <h2 class="text-center">
+                    <span style="background: #10245a;color:#fff;border-radius:10px 0px;padding:0px 5px">INDUSTRY</span>
+                    <span style="background: #ef622b;border-radius:10px 0px;padding:0px 5px;color:#fff;">WE SERVE</span>
+                </h2>
                 <div class="row">
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-1.png" alt="client-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-2.png" alt="client-image">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-3.png" alt="client-image">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-4.png" alt="client-image">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-5.png" alt="client-image">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-6.png" alt="client-image">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-7.png" alt="client-image">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-8.png" alt="client-image">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-9.png" alt="client-image">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-10.png" alt="client-image">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-1.png" alt="client-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-2.png" alt="client-image">
                         </div>
                     </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-3.png" alt="client-image">
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-4.png" alt="client-image">
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-5.png" alt="client-image">
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-6.png" alt="client-image">
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-7.png" alt="client-image">
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-8.png" alt="client-image">
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-9.png" alt="client-image">
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/port-10.png" alt="client-image">
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
+
         </div>
+
+
     </section>
+
+
+
+
 
     <!--    contact section-->
     <section id="contact">
@@ -521,7 +528,6 @@
                                         height: 100%;
                                         width: 100%;
                                     }
-
                                 </style>
                                 <style>
                                     .gmap_canvas {
@@ -530,7 +536,6 @@
                                         height: 100%;
                                         width: 100%;
                                     }
-
                                 </style>
                             </div>
                         </div>
@@ -581,7 +586,6 @@
                 navbar.classList.remove("sticky");
             }
         }
-
     </script>
 
     <!-- dropdown menu js -->
@@ -594,7 +598,6 @@
                 }
             });
         });
-
     </script>
 
     <!--    back to top bitton js-->
@@ -618,8 +621,5 @@
             document.body.scrollTop = 0;
             document.documentElement.scrollTop = 0;
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
