--- a/about us/overview.html
+++ b/about us/overview.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Our Team </title>
+    <title>Overview </title>
 
     <!-- fonts link   -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,10 +20,7 @@
 
     <!--  css link-->
     <link rel="stylesheet" href="style.css">
-
-
-
-
+    
 </head>
 
 <body>
@@ -181,124 +178,85 @@
     <div class="banner">
         <div class="fixed-image"></div>
     </div>
-    <!--    team section -->
-    <section id="team-section">
-        <div class="team-wrapper">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+  
+<!--  over view content section -->
+ 
+ <section id="overview">
+     <div class="container">
+         <div class="row">
+             <div class="col-md-12 head-line ">
+                 <div class="headline-title">
+                     <h1>IT WAY BD is a certified best website and top software company in bangladesh.</h1>
+                 </div>
+                 <div class="separator">
+                     
+                 </div>
+                 <div class="headline-subtitle">
+                     <p>Top Software Company in Bangladesh</p>
+                 </div>
+             </div>
+             <div class="mb-2 pb-3">
+             <div class="row">
+             <div class="col-md-6 text-content">
+                <p>
+                    . Since 2018, IT WAY BD has a successful track record of delivering innovative and cost-effective technical services to its valuable customers in both Corporate and public sectors undertakings. The best website Software Company in Bangladesh. We are always ready to take any types of a challenge with the confidence.IT WAY BD established with the mission to maintain the status of leading a software solution provider ensuring a benefit of employees customers and a partner, IT WAY BD provides quality solutions to build The Digital Delta powered by the innovation and guided by an integrity. Like the remarkable growth of the frugality of Bangladesh, IT WAY BD has also wondered its guests and mates with amazing results, by erecting the world-class capacity to deliver the world-wide solution Like the remarkable growth of the frugality of Bangladesh, IT WAY BD has also wondered its guests and mates with amazing results, by erecting the world-class capacity to deliver the world-wide solutions.<br><br>
 
+The solutions provided by IT WAY BD help its national & the global clientele to add unprecedented value to their businesses. As a company, we have contributed significantly to the digitalization of Bangladesh by designing and implementing critical projects like Enterprise Resource Planning, or complete Business Management Solution. IT WAY BD is the IT partner of many corporate & public sectors in Bangladesh. IT WAY BD also touched the entrepreneur of Bangladesh by offering a comprehensive solution by the coast an effective web solution & services.<br><br>
+
+Today, IT WAY BD is Top software company in Bangladesh.
+IT WAY BD pioneer of working with the latest technologies that help us to imagine the tomorrow world.
+                </p>
+             </div>
+             <div class="col-md-6 image-content">
+                <img src="../assets/images/over.png" alt="overview image">
+             </div>
+                 </div>
+             </div>
+         </div>
+         <div class="row">
+             <div class="col-md-6 article-box">
+                 <div class="article">
+                     <h3>our mission </h3>
+                     <p>Our mission is to achieve customer satisfaction. For that, we provide time tested, secure, reliable & cost- effective management level business solutions to our customers</p>
+                 </div>
+             </div>
+             <div class="col-md-6 article-box">
+                 <div class="article-image">
+                     <img src="../assets/images/vision.jpg" alt="vision">
+                 </div>
+             </div>
+         </div>
+         <div class="row">
+            <div class="col-md-6 article-box">
+                 <div class="article-image">
+                     <img src="../assets/images/vision.jpg" alt="vision">
+                 </div>
+             </div>
+             <div class="col-md-6">
+                 <div class="article">
+                     <h3>our mission </h3>
+                     <p>Our mission is to achieve customer satisfaction. For that, we provide time tested, secure, reliable & cost- effective management level business solutions to our customers</p>
+                 </div>
+             </div>
+         </div>
+         <div class="row">
+             <div class="col-md-6">
+                 <div class="article">
+                     <h3>our mission </h3>
+                     <p>Our mission is to achieve customer satisfaction. For that, we provide time tested, secure, reliable & cost- effective management level business solutions to our customers</p>
+                 </div>
+             </div>
+             <div class="col-md-6">
+                 <div class="article-image">
+                     <img src="../assets/images/vision.jpg" alt="vision">
+                 </div>
+             </div>
+         </div>
+     </div>
+ </section>
+  
+  
+  
     <!--    contact section-->
     <section id="contact">
         <div class="container">
@@ -542,11 +500,8 @@
         <div class="sub-footer">
             <div class="container">
                 <div class="text-light">
-                    <p>Copyright © 2022 .
-
-
-
-
+                    <p>
+                       Copyright © 2022 .
                         <a href="github.com/mrcodeflex"> @mrcodeflex</a> All Rights Reserved
                     </p>
                 </div>
@@ -597,7 +552,7 @@
 
     </script>
 
-    <!--    back to top bitton js-->
+    <!--    back to top button js-->
     <script>
         let backtotop = document.getElementById("gotop");
 
