--- a/about us/testimonial.html
+++ b/about us/testimonial.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Our Team </title>
+    <title>Testimonial </title>
 
     <!-- fonts link   -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,10 @@
 
     <!--    fontawesome link -->
     <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css">
+
+    <!--    slick slider css link-->
+    <link rel="stylesheet" href="../assets/silk/css/slick-theme.css">
+    <link rel="stylesheet" href="../assets/silk/css/slick.css">
 
     <!--  bootstrap link-->
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
@@ -94,8 +98,8 @@
                                             ABOUT US
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item  active" href="#">Our Team</a></li>
-                                            <li><a class="dropdown-item" href="#">Testimonial</a></li>
+                                            <li><a class="dropdown-item  " href="#">Our Team</a></li>
+                                            <li><a class="dropdown-item  active" href="#">Testimonial</a></li>
                                             <li><a class="dropdown-item" href="#">Our Client</a></li>
                                             <li><a class="dropdown-item" href="#">Partnership</a></li>
                                             <li><a class="dropdown-item" href="#">Technologies</a></li>
@@ -178,128 +182,99 @@
 
     <!--    banner section -->
 
-    <div class="banner">
-        <div class="fixed-image"></div>
-    </div>
-    <!--    team section -->
-    <section id="team-section">
-        <div class="team-wrapper">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <section>
+        <div class="banner">
+            <div class="fixed-image"></div>
         </div>
     </section>
 
-    <!--    contact section-->
+    <!-- testimonial section -->
+
+    <section id="testimonial" class="mt-5">
+        <div class="container-fluid client-bg">
+            <div class="container">
+                <div class="testimonial-wrapper">
+                    <div class="testimonial-title">
+                        <h2 class="text-center">
+                            <span style="background: #10245a;color:#fff;border-radius:10px 0px;padding:0px 5px">OUR</span>
+                            <span style="background: #ef622b;border-radius:10px 0px;padding:0px 5px;color:#fff;">TESTIMUNIALS</span>
+                        </h2>
+                    </div>
+
+                    <div class="client-slider">
+                        <div class="testimonial-item">
+                            <img src="../assets/images/test%20-img-01.jpg" alt="client image" class="client-image">
+
+                            <p class="client-text">
+                                IT way bd is very professional and maintain time schedule for the deadline. Their work is very responsive and managable. I have a very good experience with them. The members of development team are hard worker and potential.
+                            </p>
+                            <div class="client-title">
+                                <p>
+                                    - Mijanur Rahman Badol ( Chairman, Choloman Shomoy )
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonial-item">
+
+                            <img src="../assets/images/test-img-03.jpg" alt="client image" class="client-image">
+
+                            <p class="client-text">
+                                IT way bd is very professional and maintain time schedule for the deadline. Their work is very responsive and managable. I have a very good experience with them. The members of development team are hard worker and potential.
+                            </p>
+                            <div class="client-title">
+                                <p>
+                                    - Mijanur Rahman Badol ( Chairman, Choloman Shomoy )
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonial-item">
+
+                            <img src="../assets/images/test-img-2.jpg" alt="client image" class="client-image">
+
+                            <p class="client-text">
+                                IT way bd is very professional and maintain time schedule for the deadline. Their work is very responsive and managable. I have a very good experience with them. The members of development team are hard worker and potential.
+                            </p>
+                            <div class="client-title">
+                                <p>
+                                    - Mijanur Rahman Badol ( Chairman, Choloman Shomoy )
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonial-item">
+
+                            <img src="../assets/images/test-img-03.jpg" alt="client image" class="client-image">
+
+                            <p class="client-text">
+                                IT way bd is very professional and maintain time schedule for the deadline. Their work is very responsive and managable. I have a very good experience with them. The members of development team are hard worker and potential.
+                            </p>
+                            <div class="client-title">
+                                <p>
+                                    - Mijanur Rahman Badol ( Chairman, Choloman Shomoy )
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonial-item">
+
+                            <img src="../assets/images/test%20-img-01.jpg" alt="client image" class="client-image">
+
+                            <p class="client-text">
+                                IT way bd is very professional and maintain time schedule for the deadline. Their work is very responsive and managable. I have a very good experience with them. The members of development team are hard worker and potential.
+                            </p>
+                            <div class="client-title">
+                                <p>
+                                    - Mijanur Rahman Badol ( Chairman, Choloman Shomoy )
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                </div>
+            </div>
+        </div>
+    </section <!-- contact section-->
     <section id="contact">
         <div class="container">
             <div class="contact-wrapper">
@@ -521,7 +496,6 @@
                                         height: 100%;
                                         width: 100%;
                                     }
-
                                 </style>
                                 <style>
                                     .gmap_canvas {
@@ -530,7 +504,6 @@
                                         height: 100%;
                                         width: 100%;
                                     }
-
                                 </style>
                             </div>
                         </div>
@@ -561,7 +534,23 @@
     <!--    bootstarp-js-->
     <script src="../assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!--activation js-->
+    <!--    silk js -->
+    <script src="../assets/silk/js/slick.min.js"></script>
+
+
+    <!--   clients feedback slider -->
+    <script>
+        $(document).ready(function() {
+            $('.client-slider').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 5000,
+                infinite: false,
+                arrows: false,
+            });
+        });
+    </script>
 
     <!--   sticky header nav bar js -->
 
@@ -581,7 +570,6 @@
                 navbar.classList.remove("sticky");
             }
         }
-
     </script>
 
     <!-- dropdown menu js -->
@@ -594,7 +582,6 @@
                 }
             });
         });
-
     </script>
 
     <!--    back to top bitton js-->
@@ -618,8 +605,5 @@
             document.body.scrollTop = 0;
             document.documentElement.scrollTop = 0;
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
