--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                             ABOUT US
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="https://mrcodeflex.github.io/Sylhet-Tech-innovation-Ltd.github.io/about%20us/ourteam.html">Our Team</a></li>
+                                            <li><a class="dropdown-item" href="/about%2520us/ourteam.html">Our Team</a></li>
                                             <li><a class="dropdown-item" href="#">Testimonial</a></li>
                                             <li><a class="dropdown-item" href="#">Our Client</a></li>
                                             <li><a class="dropdown-item" href="#">Partnership</a></li>
@@ -267,6 +267,7 @@
                                         <p>Countries </p>
                                     </div>
                                 </div>
+                                
                                 <div class="col-md-4">
                                     <div class="about-box-item">
                                         <img src="assets/images/ind.png" alt="">
@@ -1066,10 +1067,7 @@
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!--    silk js -->
-    <script src="assets/silk/js/slick.min.js"></script>
-    <script>
-
-    </script>
+    <script src="assets/silk/js/slick.min.js"></script>>
     <!--activation js-->
 
     <!--    slick slider active js-->
