--- a/about us/technologies.html
+++ b/about us/technologies.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Our Team </title>
+    <title>Technologies we used </title>
 
     <!-- fonts link   -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -94,11 +94,11 @@
                                             ABOUT US
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item  active" href="#">Our Team</a></li>
+                                            <li><a class="dropdown-item " href="#">Our Team</a></li>
                                             <li><a class="dropdown-item" href="#">Testimonial</a></li>
-                                            <li><a class="dropdown-item" href="#">Our Client</a></li>
+                                            <li><a class="dropdown-item " href="#">Our Client</a></li>
                                             <li><a class="dropdown-item" href="#">Partnership</a></li>
-                                            <li><a class="dropdown-item" href="#">Technologies</a></li>
+                                            <li><a class="dropdown-item active" href="#">Technologies</a></li>
                                             <li><a class="dropdown-item" href="#">Overview</a></li>
 
                                         </ul>
@@ -181,124 +181,105 @@
     <div class="banner">
         <div class="fixed-image"></div>
     </div>
-    <!--    team section -->
-    <section id="team-section">
-        <div class="team-wrapper">
-            <div class="container">
+    <!--   client section -->
+
+    <section id="ourclient" class="mt-5">
+        <div class="container">
+            <div class="our-client-wrapper text-center">
+                <h2 class="text-center">
+                    <span style="background: #10245a;color:#fff;border-radius:10px 0px;padding:0px 5px">WORK</span>
+                    <span style="background: #ef622b;border-radius:10px 0px;padding:0px 5px;color:#fff;">TECHNOLOGIES</span>
+                </h2>
                 <div class="row">
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/react.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                     <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/php.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                     <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/java.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                     <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/mysql.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                     <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/js.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/laravel.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/bootstrap.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/angular.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/and.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/python.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/ai.png" alt="technolgies-image ">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="img-box pic-bg team-member">
-                            <div class="overlay-container">
-                                <img src="../assets/images/imad.jpg" alt="imad uddin mahi">
-                            </div>
-                            <h4>Imad Uddin Mahi </h4>
-                            <p>CTO</p>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/ps.png" alt="technolgies-image ">
                         </div>
                     </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/jq.png" alt="technolgies-image ">
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/wordpress.png" alt="technolgies-image ">
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/codeIg.png" alt="technolgies-image ">
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="our-client-box">
+                            <img src="../assets/images/cisco.png" alt="technolgies-image ">
+                        </div>
+                    </div>
+
                 </div>
             </div>
-        </div>
-    </section>
 
+        </div>
+
+
+    </section>
     <!--    contact section-->
     <section id="contact">
         <div class="container">
@@ -521,7 +502,6 @@
                                         height: 100%;
                                         width: 100%;
                                     }
-
                                 </style>
                                 <style>
                                     .gmap_canvas {
@@ -530,7 +510,6 @@
                                         height: 100%;
                                         width: 100%;
                                     }
-
                                 </style>
                             </div>
                         </div>
@@ -581,7 +560,6 @@
                 navbar.classList.remove("sticky");
             }
         }
-
     </script>
 
     <!-- dropdown menu js -->
@@ -594,7 +572,6 @@
                 }
             });
         });
-
     </script>
 
     <!--    back to top bitton js-->
@@ -618,8 +595,6 @@
             document.body.scrollTop = 0;
             document.documentElement.scrollTop = 0;
         }
-
     </script>
 </body>
-
 </html>
